force-app/main/default/objects/Attribute_Value__c.object
<CustomObject>
    <description>Represents the benefits and values which are allowed for those benefits for a plan family</description>
    <fields>
        <fullName>Attribute_Category__c</fullName>
        <formula>TEXT( Attribute__r.Attribute_Category__c)</formula>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Code__c</fullName>
        <formula>Attribute__r.Name</formula>
        <label>Attribute Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Name__c</fullName>
        <formula>Attribute__r.Attribute_Name__c</formula>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Value__c</fullName>
        <label>Attribute Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipName>Attribute_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Network_Display_Value__c</fullName>
        <label>In Network Display Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Network_Value__c</fullName>
        <label>In Network Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limits_And_Exceptions_Text_Area__c</fullName>
        <description>Text Area field for limits &amp; exceptions to be able to be included in formula and SOQL queries</description>
        <label>Limits And Exceptions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Limits_And_Exceptions__c</fullName>
        <label>Limits And Exceptions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_Of_Network_Display_Value__c</fullName>
        <label>Out Of Network Display Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Of_Network_Value__c</fullName>
        <label>Out Of Network Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <label>Plan Family</label>
        <referenceTo>Plan_Family__c</referenceTo>
        <relationshipLabel>Attribute Values</relationshipLabel>
        <relationshipName>Attribute_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <formula>TEXT( Attribute__r.Value_Type__c )</formula>
        <label>Value Type</label>
        <type>Text</type>
    </fields>
    <label>Attribute Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Plan_Family__c</columns>
        <columns>Attribute__c</columns>
        <columns>NAME</columns>
        <columns>Attribute_Value__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>In_Network_Display_Value__c</columns>
        <columns>Out_Of_Network_Display_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>Bronze_Attributes</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Bronze Attributes</label>
    </listViews>
    <nameField>
        <label>Variant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>