force-app/main/default/objects/Attribute_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Plan_Family__c</columns>
    <columns>Attribute__c</columns>
    <columns>NAME</columns>
    <columns>Attribute_Value__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>In_Network_Display_Value__c</columns>
    <columns>Out_Of_Network_Display_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>