force-app/main/default/objects/Attribute_Value__c/listViews/Bronze_Attributes.listView-meta.xml
<ListView>
    <fullName>Bronze_Attributes</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Bronze Attributes</label>
</ListView>